//    cwshopbot
//    Copyright (C) 2019  Marat Bukharov.
//
//    This program is free software: you can redistribute it and/or modify
//    it under the terms of the GNU Affero General Public License as published by
//    the Free Software Foundation, either version 3 of the License, or
//    (at your option) any later version.
//
//    This program is distributed in the hope that it will be useful,
//    but WITHOUT ANY WARRANTY; without even the implied warranty of
//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
//    GNU Affero General Public License for more details.
//
//    You should have received a copy of the GNU Affero General Public License
//    along with this program.  If not, see <http://www.gnu.org/licenses/>.
syntax = "proto3";

package name.maratik.cw.cwshopbot.proto;

option java_package = "name.maratik.cw.cwshopbot.proto";
option java_outer_classname = "ReplyData";

enum RequestType {
    SEARCH_QUERY = 0;
    STATS_USERS = 1;
    YELLOW_PAGES = 2;
}

message PagedRequest {
    int32 page = 1;
    RequestType request_type = 2;
    string query = 3;
}
